added second p tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1>Function Challenge</h1>
   <p>This was created on the master branch...
   </p>
+  <p>This was created on the SecondPTag branch!!
+  </p>
 <button onClick="buttonClick()">Click here</button>
 </body>
 </html>
