--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Week Three</title>
 <meta charset="utf-8">
-<script src = "scripts/script.js"></script>
+<script src = "script.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body onload = showAlert()">
+<body onload = "showAlert()">
   <h1>Function Challenge</h1>
   <p>This was created on the master branch...
   </p>
